--- a/src/main/webapp/package.json
+++ b/src/main/webapp/package.json
@@ -49,5 +49,6 @@
     "autoprefixer": "^10.4.16",
     "postcss": "^8.4.33",
     "tailwindcss": "^3.4.1"
-  }
+  },
+  "proxy": "http://localhost:8080"
 }
