--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,7 +17,7 @@ spring.datasource.password=1234
 
 #JPA
 ##스키마 생성 - create(기존 테이블이 있으면 삭제 후 생성.), update(변경된 부분만 반영) 둘 중 하나를 써주게된다.
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create
 ##DDL 생성시 데이터베이스 고유의 기능을 사용하겠는가?
 spring.jpa.generate-ddl=true
 ## api 호출시 실행되는 sql문을 콘솔에 보여줄 것인가?
