수정:packageJson 홈페이지 상대경로로 수정

--- a/src/main/webapp/package.json
+++ b/src/main/webapp/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://jja6312.github.io/myBlog/",
+  "homepage": ".",
   "name": "blog",
   "version": "0.1.0",
   "private": true,
