배포:ESLint 최적화

--- a/src/main/webapp/.eslintrc.yml
+++ b/src/main/webapp/.eslintrc.yml
@@ -1,6 +1,7 @@
 env:
   browser: true
   es2021: true
+  node: true
 extends:
   - eslint:recommended
   - plugin:react/recommended
@@ -9,4 +10,11 @@ parserOptions:
   sourceType: module
 plugins:
   - react
-rules: {}
+ignorePatterns:
+  - "build/*"
+  - "static/js/*.js"
+rules:
+  react/prop-types: "off"
+settings:
+  react:
+    version: "detect"
