--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -56,7 +56,7 @@ jobs:
           cp appspec.yml build/libs/
           cp deploy.sh build/libs/
           cd build/libs/
-          zip -r springboot-build-$GITHUB_SHA.zip ./*
+          zip -r springboot-build-$GITHUB_SHA.zip myBlog-0.0.1-SNAPSHOT.jar appspec.yml deploy.sh
 
       - name: Upload Spring Boot build zip to S3
         run: |
