배포:springboot폴더 내 nuhup.out이 생성되지않고 실행권한이없다. appspec의 runas를 root로 변경해봄.

--- a/appspec.yml
+++ b/appspec.yml
@@ -20,4 +20,4 @@ hooks:
     # 배포 후 실행할 스크립트 위치. EC2에서 Spring Boot 애플리케이션을 구동
     - location: deploy.sh
       timeout: 300
-      runas: ubuntu
+      runas: root
