배포:aws secret manager gradle의존성추가

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,6 +14,10 @@ server.port=8080
 # spring.datasource.username=root
 # spring.datasource.password=1234
 
+
+logging.level.org.springframework.web=DEBUG
+logging.level.org.hibernate=ERROR
+
 # aws RDS mysql, Secrets Manager
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=${DATABASE_URL}
@@ -31,6 +35,5 @@ spring.jpa.show-sql=true
 spring.jpa.database=mysql
 ## MySQL 상세 지정
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
-
 
 
