--- a/build.gradle
+++ b/build.gradle
@@ -29,6 +29,10 @@ dependencies {
 	runtimeOnly 'com.mysql:mysql-connector-j'
 	annotationProcessor 'org.projectlombok:lombok'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+
+	// aws
+	    implementation("com.amazonaws.secretsmanager:aws-secretsmanager-jdbc:1.0.12")
+
 }
 
 tasks.named('test') {
