--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,8 +14,9 @@ server.port=8080
 # spring.datasource.username=root
 # spring.datasource.password=1234
 
+logging.level.root=DEBUG
 logging.level.org.springframework.web=DEBUG
-logging.level.org.hibernate=ERROR
+logging.level.org.hibernate=DEBUG
 
 # aws RDS mysql, Secrets Manager
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
