--- a/src/main/webapp/package.json
+++ b/src/main/webapp/package.json
@@ -52,5 +52,5 @@
     "postcss": "^8.4.33",
     "tailwindcss": "^3.4.1"
   },
-  "proxy": "http://localhost:8080"
+  "proxy": "http://43.203.18.91:8080"
 }
