리팩토링:zustand 도입 및 메인 상태관리 리팩토링

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,9 +9,9 @@ server.port=8080
 #spring.datasource.password=bitcamp!@#123
 
 
-logging.level.root=DEBUG
-logging.level.org.springframework.web=DEBUG
-logging.level.org.hibernate=DEBUG
+# logging.level.root=DEBUG
+# logging.level.org.springframework.web=DEBUG
+# logging.level.org.hibernate=DEBUG
 
 # mysql
 # spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
