--- a/src/main/webapp/package.json
+++ b/src/main/webapp/package.json
@@ -19,7 +19,8 @@
     "react-notion-x": "^6.16.0",
     "react-router-dom": "^6.21.2",
     "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "zustand": "^4.5.0"
   },
   "scripts": {
     "start": "react-scripts start",
