--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,10 +9,10 @@ server.port=8080
 #spring.datasource.password=bitcamp!@#123
 
 # mysql
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/myblog?serverTimezone=Asia/Seoul
-spring.datasource.username=root
-spring.datasource.password=1234
+# spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+# spring.datasource.url=jdbc:mysql://localhost:3306/myblog?serverTimezone=Asia/Seoul
+# spring.datasource.username=root
+# spring.datasource.password=1234
 
 
 #JPA
