--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -22,11 +22,14 @@ server.port=8080
 
 
 # aws RDS mysql, Secrets Manager
+# spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+# spring.datasource.url=${DATABASE_URL}
+# spring.datasource.username=${DATABASE_USERNAME}
+# spring.datasource.password=${DATABASE_PASSWORD}
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=${DATABASE_URL}
-spring.datasource.username=${DATABASE_USERNAME}
-spring.datasource.password=${DATABASE_PASSWORD}
-
+spring.datasource.url=jdbc:mysql://myblog-maindb.clqu8mwc6btg.ap-northeast-2.rds.amazonaws.com:3306/myblogdb?serverTimezone=Asia/Seoul
+spring.datasource.username=admin
+spring.datasource.password=12341234
 
 
 
@@ -39,5 +42,5 @@ spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 
 # MyBatis
 #mybatis.type-aliases-package=studyTime.mapper
-mybatis.config=mybatis/config.xml
+mybatis.config=classpath:mybatis/config.xml
 mybatis.mapper-locations=classpath:mybatis/mappers/*.xml
