--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -26,6 +26,7 @@ server.port=8080
 # spring.datasource.url=${DATABASE_URL}
 # spring.datasource.username=${DATABASE_USERNAME}
 # spring.datasource.password=${DATABASE_PASSWORD}
+# aws RDS mysql, Secrets Manager
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://myblog-maindb.clqu8mwc6btg.ap-northeast-2.rds.amazonaws.com:3306/myblogdb?serverTimezone=Asia/Seoul
 spring.datasource.username=admin
