--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,6 +7,9 @@ server.port=8080
 #spring.datasource.url=jdbc:mysql://db-ioaad-kr.vpc-pub-cdb.ntruss.com:3306/studydb?serverTimezone=Asia/Seoul&allowPublicKeyRetrieval=true&useSSL=false
 #spring.datasource.username=study
 #spring.datasource.password=bitcamp!@#123
+logging.level.root=WARN
+logging.level.org.springframework.web=DEBUG
+logging.file.name=logs/myBlogLog.log
 
 
 # logging.level.root=DEBUG
@@ -22,11 +25,16 @@ server.port=8080
 
 
 # aws RDS mysql, Secrets Manager
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=${DATABASE_URL}
-spring.datasource.username=${DATABASE_USERNAME}
-spring.datasource.password=${DATABASE_PASSWORD}
+# spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+# spring.datasource.url=${DATABASE_URL}
+# spring.datasource.username=${DATABASE_USERNAME}
+# spring.datasource.password=${DATABASE_PASSWORD}
 
+# aws RDS mysql, Secrets Manager
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:mysql://myblog-maindb.clqu8mwc6btg.ap-northeast-2.rds.amazonaws.com:3306/myblogdb?serverTimezone=Asia/Seoul
+spring.datasource.username=admin
+spring.datasource.password=12341234
 
 
 #JPA
