--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,8 +7,12 @@ server.port=8080
 #spring.datasource.url=jdbc:mysql://db-ioaad-kr.vpc-pub-cdb.ntruss.com:3306/studydb?serverTimezone=Asia/Seoul&allowPublicKeyRetrieval=true&useSSL=false
 #spring.datasource.username=study
 #spring.datasource.password=bitcamp!@#123
+
+# root 패키지의 로깅 레벨을 WARN으로 설정
 logging.level.root=WARN
+# org.springframework.web 패키지의 로깅 레벨을 DEBUG로 설정
 logging.level.org.springframework.web=DEBUG
+# 로그 파일의 이름을 logs/myBlogLog.log로 설정
 logging.file.name=logs/myBlogLog.log
 
 
@@ -25,16 +29,12 @@ logging.file.name=logs/myBlogLog.log
 
 
 # aws RDS mysql, Secrets Manager
-# spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-# spring.datasource.url=${DATABASE_URL}
-# spring.datasource.username=${DATABASE_USERNAME}
-# spring.datasource.password=${DATABASE_PASSWORD}
-
-# aws RDS mysql, Secrets Manager
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://myblog-maindb.clqu8mwc6btg.ap-northeast-2.rds.amazonaws.com:3306/myblogdb?serverTimezone=Asia/Seoul
-spring.datasource.username=admin
-spring.datasource.password=12341234
+spring.datasource.url=${DATABASE_URL}
+spring.datasource.username=${DATABASE_USERNAME}
+spring.datasource.password=${DATABASE_PASSWORD}
+
+
 
 
 #JPA
