--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -30,12 +30,16 @@ logging.file.name=logs/myBlogLog.log
 # 43...203.18.91
 
 # aws RDS mysql, Secrets Manager
+# spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+# spring.datasource.url=${DATABASE_URL}
+# spring.datasource.username=${DATABASE_USERNAME}
+# spring.datasource.password=${DATABASE_PASSWORD}
+
+# aws RDS mysql, Secrets Manager
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=${DATABASE_URL}
-spring.datasource.username=${DATABASE_USERNAME}
-spring.datasource.password=${DATABASE_PASSWORD}
-
-
+spring.datasource.url=jdbc:mysql://myblog-maindb.clqu8mwc6btg.ap-northeast-2.rds.amazonaws.com:3306/myblogdb?serverTimezone=Asia/Seoul
+spring.datasource.username=admin
+spring.datasource.password=12341234
 
 
 
@@ -49,5 +53,6 @@ spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 
 # MyBatis
 #mybatis.type-aliases-package=studyTime.mapper
-mybatis.config=classpath:mybatis/config.xml
+# mybatis.config-location==classpath:mybatis/config.xml
+mybatis.configuration.map-underscore-to-camel-case=true
 mybatis.mapper-locations=classpath:mybatis/mappers/*.xml
