--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,7 +9,7 @@ server.port=8080
 #spring.datasource.password=bitcamp!@#123
 
 # root 패키지의 로깅 레벨을 WARN으로 설정
-logging.level.root=WARN
+logging.level.root=INFO
 # org.springframework.web 패키지의 로깅 레벨을 DEBUG로 설정
 logging.level.org.springframework.web=DEBUG
 # 로그 파일의 이름을 logs/myBlogLog.log로 설정
@@ -23,16 +23,11 @@ logging.file.name=logs/myBlogLog.log
 
 # 43...203.18.91
 # aws RDS mysql, Secrets Manager
-# spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-# spring.datasource.url=${DATABASE_URL}
-# spring.datasource.username=${DATABASE_USERNAME}
-# spring.datasource.password=${DATABASE_PASSWORD}
-
-# aws RDS mysql, Secrets Manager
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://myblog-maindb.clqu8mwc6btg.ap-northeast-2.rds.amazonaws.com:3306/myblogdb?serverTimezone=Asia/Seoul
-spring.datasource.username=admin
-spring.datasource.password=12341234
+spring.datasource.url=${DATABASE_URL}
+spring.datasource.username=${DATABASE_USERNAME}
+spring.datasource.password=${DATABASE_PASSWORD}
+
 
 
 
